--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "dependencies": {
     "chart.js": "^2.9.3",
     "d3": "^4.13.0",
-    "d3-force-reuse": "^1.0.1",
-    "moment": "^2.24.0"
+    "d3-force-reuse": "^1.0.1"
   }
 }
